fix p2p search; es highlight fix; various fixes